# chronicle

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.dev.yaml  compose.override.yaml  compose.prod.yaml  compose.yaml  package-lock.json  pyproject.toml  release-please-config.json
.github/: dependabot.yaml
.github/workflows/: backend-ci.yaml  backend-ci.yml  backend.yml  build-images.yaml  build.yaml  ci.yml  frontend-ci.yaml  general-ci.yaml  general-ci.yml  release.yaml  release.yml  trufflehog.yml  worker-ci.yaml  worker.yaml
docker/api-gateway/: Dockerfile
docs/: admin.md  dev.md  overview.md  readme.md  user.md
docs/architecture/decisions/: 0001-record-architecture-decisions.md  (+2 more)
docs/guides/: admin.md  dev.md  user.md
scripts/: update_version.sh
scripts/smoke/: smoke-backend-start-health.sh  smoke-db-reset.sh  smoke-user-auth.sh  smoke-user-profile-edit.sh  stack-lib.sh
services/backend/: .env.example  Dockerfile  README.md  alembic.ini  extract_api.py  openapi.json  pyproject.toml  requirements.txt
services/backend/app/: main.py
services/backend/app/api/: auth.py  calendar.py  extract_api.py  health.py  integration.py  openapi.json  profile.py  profiles.py  task.py
services/backend/app/core/: auth.py  config.py  crud.py  db.py  sync_config_helper.py
services/backend/app/db/: session.py
services/backend/app/models/: __init__.py  integration.py  profile.py  user.py
services/backend/app/schemas/: auth.py  integration.py  profiles.py
services/backend/migrations/: create_scheduler_tables.py  env.py
services/backend/migrations/versions/: 117e101726ca_add_workday_hours_to_calendar_profile.py  3ed4f615a293_add_calendars_property_to_user.py  502d3de1e09c_initial_models_2.py  530db94a99eb_initial_models_2.py  7128861b7fe5_add_user_calenadar_relationship.py  72eb607b5603_remove_user_profile_add_name_to_user.py  9a20c641b777_remove_profiles_from_user.py  bf00d9eb6971_add_tasks.py  da330939ac10_fix_wrong_back_population_setting_on_.py
services/backend/tests/: conftest.py  test_auth.py  test_integration.py  utils.py
services/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
services/frontend/src/: App.css  App.jsx  api.js  (+3 more)
services/schedule-service/: integrator.py  main.py  models.py  pyproject.toml  scheduler.py  solver.py
services/worker/: .env.example  .gitignore  Dockerfile  README.md  actions.py  db.py  main.py  models.py  pyproject.toml  test.py
services/worker/sched/: utils.py
services/worker/src/sched/: scheduler.py  solver.py
services/worker/src/sync/: engine.py
services/worker/src/worker/: __init__.py  actions.py  db.py  main.py  models.py  queue.py
services/worker/src/worker/sched/: scheduler.py  solver.py  utils.py
services/worker/src/worker/sync/: engine.py  sources.py  targets.py
services/worker/sync/: engine.py  sources.py  targets.py
services/worker/tests/: helpers.py  test_hash_event.py  test_ics_source.py  test_queue.py  test_sched.py  test_sync.py  test_sync_rules_actions.py
(+57 files in other folders)
