[project]
name = "backend"
# x-release-please-start-version
version = "0.1.3"
# x-release-please-end
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.6.1",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "chronicle-shared",
    "fastapi[standard]==0.135.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pyjwt>=2.12.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0"]

[tool.uv.sources]
chronicle-shared = { git = "https://github.com/chronicle-cal/shared" }
