[project]
name = "worker"
# x-release-please-start-version
version = "0.1.4"
# x-release-please-end
description = "Add your description here"
readme = "README.md"
authors = [{ name = "nilsfast", email = "mail@nilsfast.com" }]
requires-python = ">=3.12"
dependencies = [
    "caldav>=3.0.0",
    "chronicle-shared",
    "icalendar>=7.0.3",
    "ortools>=9.15.6755",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
worker = "worker:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.1", "pytest>=9.0.3", "pytest-cov>=7.0.0", "ruff>=0.15.6"]

[tool.uv.sources]
chronicle-shared = { git = "https://github.com/chronicle-cal/shared" }
