[project]
name = "worker"
# x-release-please-start-version
version = "0.1.4"
# x-release-please-end
description = "Add your description here"
readme = "README.md"
authors = [{ name = "nilsfast", email = "mail@nilsfast.com" }]
requires-python = ">=3.12"
dependencies = [
    "caldav>=3.2.0",
    "chronicle-shared",
    "icalendar>=7.1.0",
    "ortools>=9.15.6755",
    "pika>=1.3.2",
    "pydantic>=2.13.3",
    "requests>=2.32.5",
    "types-requests>=2.33.0.20260408",
]

[project.scripts]
worker = "worker:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.20.2", "pytest>=9.0.3", "pytest-cov>=7.0.0", "ruff>=0.15.12"]

[tool.uv.sources]
chronicle-shared = { git = "https://github.com/chronicle-cal/shared" }
